main.css
body {
  background: #1e1e1e;
  color: #dedede;
  font-family: Helvetica, sans-serif;
  text-transform: uppercase;
  font-size: 14px;
}

* {
  transition: 0.1s;
}

#cassette {
  width: 400px;
  height: 200px;
  margin: 0 auto;
  display: flex;
  align-items: center;
  justify-content: space-between;
  border: 2px solid #dedede;
  padding: 20px;
  border-radius: 5px;
}

.reel {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 175px;
  height: 175px;
  border: 2px solid #dedede;
  border-radius: 50%;
}

.recording #cassette,
.recording .reel,
.recording .reel-inner {
  border-color: #d82323;
}

.recording .reel-inner i {
  background-color: #d82323;
}

.reel-inner {
  width: 50px;
  height: 50px;
  border: 2px solid #dedede;
  border-radius: 50%;
  background: #1e1e1e;
  position: relative;
  animation: spin 5s infinite;
  animation-timing-function: linear;
  animation-play-state: paused;
}

#cassette.spin .reel-inner {
  animation: spin2 1s;
}

#cassette.spin-back .reel-inner {
  animation: spin3 1s;
}

body:not(.playing) .reel-inner {
  animation-play-state: paused;
}

body.playing .reel-inner {
  animation-play-state: running;
}

@keyframes spin {
  100% {
    transform: rotate(360deg);
  }
}

@keyframes spin2 {
  100% {
    transform: rotate(360deg);
  }
}

@keyframes spin3 {
  100% {
    transform: rotate(-360deg);
  }
}

.reel-inner i {
  width: 2px;
  height: 10px;
  background: #dedede;
  display: inline-block;
  position: absolute;
}

.reel-inner i:nth-child(1) {
  left: 24px;
  top: 0;
}

.reel-inner i:nth-child(2) {
  transform: rotate(56deg);
  top: 10px;
  right: 6px;
}

.reel-inner i:nth-child(3) {
  transform: rotate(116deg);
  bottom: 10px;
  right: 6px;
}

.reel-inner i:nth-child(4) {
  left: 24px;
  bottom: 0;
}

.reel-inner i:nth-child(5) {
  transform: rotate(56deg);
  bottom: 10px;
  left: 6px;
}

.reel-inner i:nth-child(6) {
  transform: rotate(116deg);
  top: 10px;
  left: 6px;
}

#timeline {
  background: linear-gradient(90deg, #dedede 1%, transparent 1%) 1px 0, #1e1e1e;
  background-size: 100px 1px;
  margin-top: 20px;
  margin-left: 50%;
  position: relative;
}

#status {
  display: flex;
  margin-bottom: 20px;
}

#status > * {
  margin-right: 15px;
}

.timeline-segment {
  height: 10px;
  background: #dedede;
  position: absolute;
  min-width: 1px;
  top: calc(50% - 5px);
}

.timeline-pitchbend {
  position: absolute;
  width: 1px;
  height: 5px;
  background: #8617ff;
  top: -2px;
}

.timeline-controlchange {
  position: absolute;
  width: 1px;
  height: 5px;
  background: cyan;
  top: -2px;
}

.current-track .timeline-segment {
  background: #42af42;
}

.recording .current-track .timeline-segment,
.recording .current-track .timeline-pitchbend,
.recording .current-track .timeline-controlchange {
  background: #d82323;
}

#timeline-center {
  margin-left: calc(50% - 5px);
  width: 10px;
  height: 10px;
  margin-top: 10px;
  border: solid #42af42;
  border-width: 0 3px 3px 0;
  display: inline-block;
  transform: rotate(45deg);
}

.recording #timeline-center {
  border-color: #d82323;
}

.track {
  background: linear-gradient(
    to bottom,
    transparent calc(50% - 1px),
    #dedede calc(50% - 1px) calc(50% + 1px),
    transparent calc(50% + 1px)
  );
  height: 20px;
  margin: 20px 0;
  position: relative;
  margin-left: 1px;
}

.track:not(.current-track) {
  opacity: 0.3;
}

#buttons {
  margin-top: 50px;
}

#config {
  margin-top: 20px;
}

#config > div {
  margin-bottom: 10px;
}

.timeline-marker {
  position: absolute;
  height: 100%;
  width: 5px;
  display: none;
}

#timeline-start-marker {
  background: #27b7a9;
}

#timeline-end-marker {
  background: #caca1e;
}

#help {
  margin-left: auto;
}

#help a {
  color: #dedede;
}

